--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,13 @@
     "target": "es5",
     "lib": [
       "dom",
+      "ES6",
       "dom.iterable",
       "esnext"
     ],
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true, 
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
