--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "jss-rtl": "^0.3.0",
+    "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
@@ -28,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": " npx swagger-typescript-api --axios  -p ./swagger.json -o ./src/utils -n myApi.ts"
   },
   "proxy": "http://217.219.165.22:5005",
   "eslintConfig": {
@@ -50,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@testing-library/cypress": "^8.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "cypress": "^8.2.0"
   }
 }
